--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "lastest",
-    "socket.io": "lastest"
+    "express": "3.4.7",
+    "socket.io": "0.9.16"
   }
 }
